--- a/Society/Interface/Components/InterestCollectionViewCell/InterestCollectionViewCell.xib
+++ b/Society/Interface/Components/InterestCollectionViewCell/InterestCollectionViewCell.xib
@@ -11,43 +11,73 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="InterestCollectionViewCell" customModule="Society" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="72" height="72"/>
+            <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="72" height="72"/>
+                <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QFZ-o5-4yL">
-                        <rect key="frame" x="0.0" y="0.0" width="72" height="72"/>
-                    </imageView>
-                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2qh-ml-vsq">
-                        <rect key="frame" x="0.0" y="0.0" width="72" height="72"/>
-                        <color key="backgroundColor" name="black20"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jkT-q6-i43" userLabel="Image Container View">
+                        <rect key="frame" x="0.0" y="0.0" width="200" height="175"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QFZ-o5-4yL">
+                                <rect key="frame" x="12.5" y="0.0" width="175" height="175"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="QFZ-o5-4yL" secondAttribute="height" multiplier="1:1" id="pWk-hk-ZLm"/>
+                                </constraints>
+                            </imageView>
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2qh-ml-vsq">
+                                <rect key="frame" x="12.5" y="0.0" width="175" height="175"/>
+                                <color key="backgroundColor" name="black20"/>
+                            </view>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="2qh-ml-vsq" firstAttribute="height" secondItem="QFZ-o5-4yL" secondAttribute="height" id="91m-eD-X21"/>
+                            <constraint firstAttribute="bottom" secondItem="QFZ-o5-4yL" secondAttribute="bottom" id="DNB-oc-1t9"/>
+                            <constraint firstItem="QFZ-o5-4yL" firstAttribute="centerX" secondItem="jkT-q6-i43" secondAttribute="centerX" id="LwW-tD-Tcf"/>
+                            <constraint firstItem="2qh-ml-vsq" firstAttribute="centerX" secondItem="QFZ-o5-4yL" secondAttribute="centerX" id="Z4u-ic-6W4"/>
+                            <constraint firstItem="QFZ-o5-4yL" firstAttribute="top" secondItem="jkT-q6-i43" secondAttribute="top" id="cjn-Rd-7pD"/>
+                            <constraint firstItem="2qh-ml-vsq" firstAttribute="width" secondItem="QFZ-o5-4yL" secondAttribute="width" id="gXl-dQ-d1g"/>
+                            <constraint firstItem="2qh-ml-vsq" firstAttribute="centerY" secondItem="QFZ-o5-4yL" secondAttribute="centerY" id="muJ-gv-MYP"/>
+                            <constraint firstItem="QFZ-o5-4yL" firstAttribute="centerY" secondItem="jkT-q6-i43" secondAttribute="centerY" id="weV-Hd-aYU"/>
+                        </constraints>
                     </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Z4-Af-VEM">
+                        <rect key="frame" x="0.0" y="175" width="200" height="25"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="25" id="hjW-UX-2VL"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" name="primaryGrey"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
             </view>
             <constraints>
-                <constraint firstItem="2qh-ml-vsq" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="1zq-9S-p95"/>
-                <constraint firstAttribute="trailing" secondItem="2qh-ml-vsq" secondAttribute="trailing" id="3EG-Mp-PzR"/>
-                <constraint firstAttribute="bottom" secondItem="2qh-ml-vsq" secondAttribute="bottom" id="K64-Oi-q5P"/>
-                <constraint firstItem="QFZ-o5-4yL" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="SNy-VK-f7a"/>
-                <constraint firstItem="QFZ-o5-4yL" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="bAK-i1-BWi"/>
-                <constraint firstAttribute="bottom" secondItem="QFZ-o5-4yL" secondAttribute="bottom" id="c3m-RK-sUv"/>
-                <constraint firstAttribute="trailing" secondItem="QFZ-o5-4yL" secondAttribute="trailing" id="ri3-5o-Fsb"/>
-                <constraint firstItem="2qh-ml-vsq" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="s9Y-i3-COd"/>
+                <constraint firstItem="jkT-q6-i43" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="9p0-Ov-Kqf"/>
+                <constraint firstItem="3Z4-Af-VEM" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="DrY-Ll-YI7"/>
+                <constraint firstItem="3Z4-Af-VEM" firstAttribute="top" secondItem="jkT-q6-i43" secondAttribute="bottom" id="F8l-NK-qyQ"/>
+                <constraint firstItem="jkT-q6-i43" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Sas-E2-2aG"/>
+                <constraint firstAttribute="trailing" secondItem="jkT-q6-i43" secondAttribute="trailing" id="jol-Sf-lXF"/>
+                <constraint firstAttribute="trailing" secondItem="3Z4-Af-VEM" secondAttribute="trailing" id="x8K-Zc-fUZ"/>
+                <constraint firstAttribute="bottom" secondItem="3Z4-Af-VEM" secondAttribute="bottom" id="zt0-g0-PFh"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="84" height="75"/>
+            <size key="customSize" width="203" height="192"/>
             <connections>
                 <outlet property="imageView" destination="QFZ-o5-4yL" id="6dy-ef-McU"/>
                 <outlet property="overlayView" destination="2qh-ml-vsq" id="fwe-R5-Yrx"/>
+                <outlet property="titleLabel" destination="3Z4-Af-VEM" id="jWQ-zQ-Aye"/>
             </connections>
-            <point key="canvasLocation" x="162.31884057971016" y="143.30357142857142"/>
+            <point key="canvasLocation" x="247.82608695652175" y="103.79464285714285"/>
         </collectionViewCell>
     </objects>
     <resources>
         <namedColor name="black20">
             <color red="0.13699999451637268" green="0.13699999451637268" blue="0.14900000393390656" alpha="0.20000000298023224" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="primaryGrey">
+            <color red="0.74901960784313726" green="0.74901960784313726" blue="0.74901960784313726" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
