--- a/Society/Interface/Flows/Onboarding/Society Selection/SocietyOnboardingView.xib
+++ b/Society/Interface/Flows/Onboarding/Society Selection/SocietyOnboardingView.xib
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="InterestOnboardingViewController" customModule="Society" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SocietyOnboardingViewController" customModule="Society" customModuleProvider="target">
             <connections>
                 <outlet property="containerView" destination="mqr-Nq-dj0" id="Vul-Pe-WcJ"/>
                 <outlet property="proceedButton" destination="Qe2-y3-z8N" id="2k3-Sl-hS0"/>
@@ -21,24 +21,24 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="CtI-kn-GsX">
-                    <rect key="frame" x="45" y="139" width="184" height="45.5"/>
+                    <rect key="frame" x="45" y="139" width="226" height="45.5"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pick some interests," textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hpz-7g-Z0M">
-                            <rect key="frame" x="0.0" y="0.0" width="184" height="24"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Join some societies," textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hpz-7g-Z0M">
+                            <rect key="frame" x="0.0" y="0.0" width="226" height="24"/>
                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
-                            <color key="textColor" name="secondaryGrey"/>
+                            <color key="textColor" name="primaryGrey"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="select at least three" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V60-Gm-v7W">
-                            <rect key="frame" x="0.0" y="24" width="184" height="21.5"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="we're sure you'll love these" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V60-Gm-v7W">
+                            <rect key="frame" x="0.0" y="24" width="226" height="21.5"/>
                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
-                            <color key="textColor" name="primaryGrey"/>
+                            <color key="textColor" name="secondaryGrey"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
                 </stackView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mqr-Nq-dj0">
-                    <rect key="frame" x="45" y="214.5" width="324" height="535.5"/>
+                    <rect key="frame" x="20" y="214.5" width="374" height="535.5"/>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qe2-y3-z8N">
                     <rect key="frame" x="45" y="780" width="324" height="42"/>
@@ -57,10 +57,12 @@
                     </constraints>
                 </imageView>
             </subviews>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <color key="backgroundColor" name="UI - View Background"/>
             <constraints>
                 <constraint firstItem="gAg-Z7-aKt" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="40" id="58Q-Bu-0NN"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="mqr-Nq-dj0" secondAttribute="trailing" constant="45" id="K3O-KU-gW8"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="mqr-Nq-dj0" secondAttribute="trailing" constant="80" id="K3O-KU-gW8">
+                    <variation key="heightClass=regular-widthClass=compact" constant="20"/>
+                </constraint>
                 <constraint firstItem="mqr-Nq-dj0" firstAttribute="top" secondItem="CtI-kn-GsX" secondAttribute="bottom" constant="30" id="Pw0-UU-VrY"/>
                 <constraint firstItem="CtI-kn-GsX" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="45" id="QQB-PO-P32"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="Qe2-y3-z8N" secondAttribute="bottom" constant="40" id="Qed-27-qqC"/>
@@ -68,7 +70,9 @@
                 <constraint firstItem="Qe2-y3-z8N" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="45" id="VUk-oa-WCF"/>
                 <constraint firstItem="CtI-kn-GsX" firstAttribute="top" secondItem="gAg-Z7-aKt" secondAttribute="bottom" constant="15" id="a6I-iO-afm"/>
                 <constraint firstItem="gAg-Z7-aKt" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="45" id="f9w-cf-8Ax"/>
-                <constraint firstItem="mqr-Nq-dj0" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="45" id="seK-nh-Th0"/>
+                <constraint firstItem="mqr-Nq-dj0" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="80" id="seK-nh-Th0">
+                    <variation key="heightClass=regular-widthClass=compact" constant="20"/>
+                </constraint>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Qe2-y3-z8N" secondAttribute="trailing" constant="45" id="z7x-1M-ugK"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
@@ -77,14 +81,17 @@
     </objects>
     <resources>
         <image name="society_logo" width="81" height="27"/>
+        <namedColor name="UI - View Background">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="action">
             <color red="0.098039215686274508" green="0.47058823529411764" blue="0.89411764705882357" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="primaryGrey">
-            <color red="0.74901960784313726" green="0.74901960784313726" blue="0.74901960784313726" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.5490196078431373" green="0.5490196078431373" blue="0.5490196078431373" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="secondaryGrey">
-            <color red="0.5490196078431373" green="0.5490196078431373" blue="0.5490196078431373" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.74901960784313726" green="0.74901960784313726" blue="0.74901960784313726" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="white">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
