--- a/Society/Interface/Components/SocietyCollectionViewCell/SocietyCollectionViewCell.xib
+++ b/Society/Interface/Components/SocietyCollectionViewCell/SocietyCollectionViewCell.xib
@@ -52,7 +52,7 @@
                                 </state>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" name="UI - Cell Background"/>
+                        <color key="backgroundColor" name="cellBackground"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="z1b-uS-adR" secondAttribute="trailing" constant="20" id="B2X-co-5WL"/>
                             <constraint firstItem="INX-BK-eFv" firstAttribute="centerY" secondItem="dxY-ao-Oxa" secondAttribute="centerY" id="IvU-KG-ky7"/>
@@ -85,11 +85,11 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <namedColor name="UI - Cell Background">
-            <color red="0.94509803921568625" green="0.96078431372549022" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <namedColor name="action">
             <color red="0.098039215686274508" green="0.47058823529411764" blue="0.89411764705882357" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="cellBackground">
+            <color red="0.94509803921568625" green="0.96078431372549022" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="primaryGrey">
             <color red="0.5490196078431373" green="0.5490196078431373" blue="0.5490196078431373" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
