--- a/Society/Interface/Flows/Onboarding/Interest Selection/InterestOnboardingView.xib
+++ b/Society/Interface/Flows/Onboarding/Interest Selection/InterestOnboardingView.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="ipad9_7" orientation="portrait" layout="fullscreen" appearance="light"/>
+    <device id="ipad9_7" orientation="portrait" layout="fullscreen" appearance="dark"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
@@ -57,7 +57,7 @@
                     </constraints>
                 </imageView>
             </subviews>
-            <color key="backgroundColor" name="UI - View Background"/>
+            <color key="backgroundColor" name="viewBackground"/>
             <constraints>
                 <constraint firstItem="gAg-Z7-aKt" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="40" id="58Q-Bu-0NN"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="mqr-Nq-dj0" secondAttribute="trailing" constant="145" id="K3O-KU-gW8">
@@ -92,9 +92,6 @@
     </objects>
     <resources>
         <image name="society_logo" width="81" height="27"/>
-        <namedColor name="UI - View Background">
-            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <namedColor name="action">
             <color red="0.098039215686274508" green="0.47058823529411764" blue="0.89411764705882357" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
@@ -103,6 +100,9 @@
         </namedColor>
         <namedColor name="secondaryGrey">
             <color red="0.74901960784313726" green="0.74901960784313726" blue="0.74901960784313726" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="viewBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="white">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
