--- a/Society/Interface/Views/Society /SocietyListView.xib
+++ b/Society/Interface/Views/Society /SocietyListView.xib
@@ -54,7 +54,7 @@
                 </button>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="GTY-yZ-Urp">
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                    <color key="backgroundColor" name="UI - View Background"/>
+                    <color key="backgroundColor" name="viewBackground"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="vM1-XZ-NEu">
                         <size key="itemSize" width="128" height="128"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -63,7 +63,7 @@
                     </collectionViewFlowLayout>
                 </collectionView>
             </subviews>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <color key="backgroundColor" name="viewBackground"/>
             <constraints>
                 <constraint firstItem="GTY-yZ-Urp" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="8Oo-uD-90A"/>
                 <constraint firstItem="ctd-Tp-ACo" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="Fm6-jG-8Me"/>
@@ -79,7 +79,7 @@
         </view>
     </objects>
     <resources>
-        <namedColor name="UI - View Background">
+        <namedColor name="viewBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
