--- a/Society/Interface/Components/Cells/SocietyCollectionViewCell/SocietyCollectionViewCell.xib
+++ b/Society/Interface/Components/Cells/SocietyCollectionViewCell/SocietyCollectionViewCell.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17132" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17105.1"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -10,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="SocietyCollectionViewCell" customModule="Society" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="SocietyCollectionViewCell" customModule="SocietyCore" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="280" height="60"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -43,7 +44,7 @@
                                     </label>
                                 </subviews>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z1b-uS-adR">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z1b-uS-adR">
                                 <rect key="frame" x="181" y="16" width="79" height="28"/>
                                 <color key="backgroundColor" name="action"/>
                                 <inset key="contentEdgeInsets" minX="25" minY="5" maxX="25" maxY="5"/>
@@ -69,13 +70,13 @@
                     </view>
                 </subviews>
             </view>
+            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
                 <constraint firstItem="dxY-ao-Oxa" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Jnb-ua-2kt"/>
                 <constraint firstAttribute="bottom" secondItem="dxY-ao-Oxa" secondAttribute="bottom" id="VHi-wi-Ieq"/>
                 <constraint firstAttribute="trailing" secondItem="dxY-ao-Oxa" secondAttribute="trailing" id="WkS-28-Jug"/>
                 <constraint firstItem="dxY-ao-Oxa" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="f9Y-hv-uhx"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="280" height="60"/>
             <connections>
                 <outlet property="containerView" destination="dxY-ao-Oxa" id="Uwx-Hr-KFy"/>
